[tool.poetry]
name = "mydevoirs"
version = "0.1.0"
description = ""
authors = ["jgirardet <ijkl@netc.fr>"]

[tool.poetry.dependencies]
python = "^3.7.5"
pony = "^0.7.11"
appdirs = "^1.4.3"
kivy = "1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = {version = "*", allows-prereleases = true}
coverage = "^4.5"
pyinstaller = "^3.5"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
