[tool.poetry]
name = "mydevoirs"
version = "0.2.0"
description = ""
authors = ["jgirardet <ijkl@netc.fr>"]

[tool.poetry.dependencies]
python = "^3.7.5"
pony = "^0.7.11"
appdirs = "^1.4.3"
kivy = "1.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
black = {version = "*", allows-prereleases = true}
coverage = "^4.5"
pyinstaller = "^3.5"
pytest-env = "^0.6.2"
mimesis = "^3.3"
isort = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88